Fixed biography spacing

--- a/styles/components/_user.sass
+++ b/styles/components/_user.sass
@@ -21,7 +21,6 @@
     max-height: 90px
     overflow: hidden
     text-overflow: ellipsis
-    margin: 0 auto 1rem
     max-width: 100%
 
 
